Added some buttons :)

--- a/index.html
+++ b/index.html
@@ -7,30 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Samuel's Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div style = "color: white">
-        <center>
-            <div>
-                <h1>Samuel Wang's Portfolio Website</h1>
-                <hr>
-            </div>
-        </center>
-        <img src = "Images/meWithPoster.jpg" height = "300" alt = "This is a picture of me in front of a poster" title="My poster presentation at the NSREC 2023 confrence">
+    <h1>Samuel Wang's Portfolio</h1>
 
-        <br>
+    <div class = "button-container">
+
+        <a href = "aboutMe.html" target = _self title = "Learn more about me!">
+            <button>
+                <b> About Me </b>
+            </button>
+        </a>
+
+        <a href = "projectsHome.html" target = _self title = "See what I've made!">
+            <button>
+                <b> My Projects </b>
+            </button>
+        </a>
+
+        <a href = "https://www.linkedin.com/in/samuel-wang-506a9029a/", target = _blank title = "Connect with me!">
+            <button>
+                <b> LinkedIn </b>
+            </button>
+        </a>
 
         <a href = "https://samuelwang1.blogspot.com/" target = _blank title = "My old blog website">
             <button>
                 <b>Previous Blog</b>
             </button>
         </a>
-    
-        <a href = "mailto: test@gmail.com" target = _self title = "Reach out!">
-            <h2 style = "color: white">
-                Email
-            </h2>
+
+        <a href = "Downloadables/Samuel Wang Electrical Engineering Resume.pdf" target = _blank title = "My resume">
+            <button>
+                <b>Resume</b>
+            </button>
         </a>
+
     </div>
+
+    <hr>
+
+    <img src = "Images/meWithPoster.jpg" height = "300" alt = "This is a picture of me in front of a poster" title="My poster presentation at the NSREC 2023 confrence">
+
+    <h4>
+        Hi, I'm Samuel Wang, an electrical and computer engineering major studying at Vanderbilt University. Feel free to explore my projects or learn more about me!
+    </h4>
 </body>
 </html>
